added a new article, and new function to se articles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.zoom-image {
+    transition: transform 0.3s ease;
+  }
+  
+  .zoom-image:hover {
+    transform: scale(1.1); /* Kicsit nagyít */
+  }
   
